--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,11 @@ board = nodemcuv2
 framework = arduino
 
 
+
+; For USB update:
 upload_port=COM4
+
+; For OTA update:
+; upload_protocol = espota
+; upload_port = IoLed.local
+; upload_port = 192.168.1.242
