--- a/data/.bak/config.json
+++ b/data/.bak/config.json
@@ -13,9 +13,11 @@
     "id_name": "iotbutton",
     "user_name": "user_name",
     "user_password": "user_password",
-    "ca_file": "certs/ca.crt",
-    "cert_file": "certs/client.crt",
-    "key_file": "certs/client.key",
+    "enable_user_and_pass": true,
+    "enable_certificates": false,
+    "ca_file": "/certs/ca.crt",
+    "cert_file": "/certs/cert.der",
+    "key_file": "/certs/private.der",
     "pub_topic": [
       "/iot_button/feed"
     ],
@@ -26,17 +28,19 @@
     ]
   },
   "services": {
-    "FTP": true,
+    "FTP": {
+      "enabled": true,
+      "user": "paclema",
+      "password": "paclema"
+    },
     "OTA": true,
     "sleep_mode": false
   },
   "device": {
-    "track_restart_counter": "true"
+    "track_restart_counter": true
   },
   "info": {
-    "restart_counter": 24,
-    "last_mqtt_state": "1560701988",
-    "last_config_saved": "1560701988",
+    "restart_counter": 0,
     "fw_version": "v0.1",
     "repo": "github.com/paclema/iot_button"
   }
