--- a/data/config.json
+++ b/data/config.json
@@ -9,13 +9,16 @@
   },
   "mqtt": {
     "server": "broker.ddns.net",
-    "port": 8883,
     "id_name": "iotbutton",
     "user_name": "user_name",
     "user_password": "user_password",
-    "ca_file": "certs/ca.crt",
-    "cert_file": "certs/client.crt",
-    "key_file": "certs/client.key",
+    "port": 1883,
+    "id_name": "iot-button",
+    "enable_user_and_pass": true,
+    "enable_certificates": false,
+    "ca_file": "/certs/ca.crt",
+    "cert_file": "/certs/cert.der",
+    "key_file": "/certs/private.der",
     "pub_topic": [
       "/iot_button/feed"
     ],
@@ -26,18 +29,10 @@
     ]
   },
   "services": {
-    "FTP": true,
     "OTA": true,
     "sleep_mode": false
   },
   "device": {
-    "track_restart_counter": "true"
-  },
-  "info": {
-    "restart_counter": 24,
-    "last_mqtt_state": "1560701988",
-    "last_config_saved": "1560701988",
-    "fw_version": "v0.1",
-    "repo": "github.com/paclema/iot_button"
+    "track_restart_counter": true
   }
 }
