--- a/data/.bak/config.json
+++ b/data/.bak/config.json
@@ -9,22 +9,22 @@
   },
   "mqtt": {
     "server": "broker.ddns.net",
-    "port": 8883,
     "id_name": "iotbutton",
     "user_name": "user_name",
     "user_password": "user_password",
+    "port": 1883,
     "enable_user_and_pass": true,
     "enable_certificates": false,
     "ca_file": "/certs/ca.crt",
     "cert_file": "/certs/cert.der",
     "key_file": "/certs/private.der",
     "pub_topic": [
-      "/iot_button/feed"
+      "/iot-button/feed"
     ],
     "sub_topic": [
-      "/iot_button/topi1",
-      "/iot_button/topi2",
-      "/iot_button/topi3"
+      "/iot-button/topi1",
+      "/iot-button/topi2",
+      "/iot-button/topi3"
     ]
   },
   "services": {
@@ -34,7 +34,26 @@
       "password": "paclema"
     },
     "OTA": true,
-    "sleep_mode": false
+    "deep_sleep": {
+      "enabled": true,
+      "mode": "WAKE_RF_DEFAULT",
+      "mode_options": [
+        "WAKE_RF_DEFAULT",
+        "WAKE_RF_DISABLED",
+        "WAKE_RFCAL",
+        "WAKE_NO_RFCAL"
+      ],
+      "sleep_time": 60000,
+      "sleep_delay": 60
+    },
+    "light_sleep": {
+      "enabled": false,
+      "mode": "LIGHT_SLEEP_T",
+      "mode_options": [
+        "NONE_SLEEP_T",
+        "LIGHT_SLEEP_T"
+      ]
+    }
   },
   "device": {
     "track_restart_counter": true
