--- a/data/config.json
+++ b/data/config.json
@@ -20,17 +20,36 @@
     "cert_file": "/certs/cert.der",
     "key_file": "/certs/private.der",
     "pub_topic": [
-      "/iot_button/feed"
+      "/iot-button/feed"
     ],
     "sub_topic": [
-      "/iot_button/topi1",
-      "/iot_button/topi2",
-      "/iot_button/topi3"
+      "/iot-button/topi1",
+      "/iot-button/topi2",
+      "/iot-button/topi3"
     ]
   },
   "services": {
     "OTA": true,
-    "sleep_mode": false
+    "deep_sleep": {
+      "enabled": true,
+      "mode": "WAKE_RF_DEFAULT",
+      "mode_options": [
+        "WAKE_RF_DEFAULT",
+        "WAKE_RF_DISABLED",
+        "WAKE_RFCAL",
+        "WAKE_NO_RFCAL"
+      ],
+      "sleep_time": 10,
+      "sleep_delay": 30
+    },
+    "light_sleep": {
+      "enabled": false,
+      "mode": "LIGHT_SLEEP_T",
+      "mode_options": [
+        "NONE_SLEEP_T",
+        "LIGHT_SLEEP_T"
+      ]
+    }
   },
   "device": {
     "track_restart_counter": true
