Added esp12 config for upload

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,14 +12,16 @@
 platform = espressif8266
 board = nodemcuv2
 ; board = d1_mini
+;board = esp12e
 framework = arduino
 
 
 
 ; For USB update:
-upload_port=COM4
+; upload_port=COM4
 
 ; For OTA update:
 ; upload_protocol = espota
 ; upload_port = IoLed.local
 ; upload_port = 192.168.1.242
+; upload_port = iotbutton.lan
