--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,11 @@ board = nodemcuv2
 ;board = esp12e
 framework = arduino
 
-
+lib_deps =
+  PubSubClient
+  ArduinoJson@>=6
+  ESP8266FtpServer
+  ESP8266_SSD1306
 
 ; For USB update:
 ; upload_port=COM4
