--- a/data/config.json
+++ b/data/config.json
@@ -14,6 +14,7 @@
     "user_password": "user_password",
     "port": 1883,
     "id_name": "iot-button",
+    "reconnect_mqtt": false,
     "enable_user_and_pass": true,
     "enable_certificates": false,
     "ca_file": "/certs/ca.crt",
