--- a/data/config.json
+++ b/data/config.json
@@ -60,7 +60,9 @@
     }
   },
   "device": {
-    "track_restart_counter": true
+    "track_restart_counter": true,
+    "loop_time_ms": 100,
+    "publish_time_ms":1500
   },
   "info": {
     "restart_counter": 0,
