Added VL53L1X readdings

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,8 @@ lib_deps =
   ArduinoJson@>=6
   ESP8266FtpServer
   ESP8266_SSD1306
+  adafruit/Adafruit_VL53L0X @ ^1.1.0
+  pololu/VL53L0X@^1.2.0
 
 ; For USB update:
 ; upload_port=COM4
