--- a/platformio.ini
+++ b/platformio.ini
@@ -20,8 +20,9 @@ lib_deps =
   ArduinoJson@>=6
   ESP8266FtpServer
   ESP8266_SSD1306
-  adafruit/Adafruit_VL53L0X @ ^1.1.0
-  pololu/VL53L0X@^1.2.0
+  ; adafruit/Adafruit_VL53L0X @ ^1.1.0
+  ; pololu/VL53L0X@^1.2.0
+  pololu/VL53L1X @ ^1.0.1
 
 ; For USB update:
 ; upload_port=COM4
