Added sensorVL53L1X_ROI custom lib and tof_gestures and vl53l1_api libs

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,8 @@
 
 [env:nodemcuv2]
 platform = espressif8266
-board = nodemcuv2
-; board = d1_mini
+; board = nodemcuv2
+board = d1_mini
 ;board = esp12e
 framework = arduino
 
@@ -22,7 +22,7 @@ lib_deps =
   ESP8266_SSD1306
   ; adafruit/Adafruit_VL53L0X @ ^1.1.0
   ; pololu/VL53L0X@^1.2.0
-  pololu/VL53L1X @ ^1.0.1
+  ; pololu/VL53L1X @ ^1.0.1
 
 ; For USB update:
 ; upload_port=COM4
@@ -30,5 +30,5 @@ lib_deps =
 ; For OTA update:
 ; upload_protocol = espota
 ; upload_port = IoLed.local
-; upload_port = 192.168.1.242
+; upload_port = 10.233.60.251
 ; upload_port = iotbutton.lan
