--- a/data/config.json
+++ b/data/config.json
@@ -62,7 +62,8 @@
   "device": {
     "track_restart_counter": true,
     "angle_accuracy": 15,
-    "loop_time_ms": 30,
+    "servo_speed_ms/60": 160,
+    "loop_sensor_time_ms": 30,
     "publish_time_ms":50
   },
   "info": {
