Added dev config for ng build

--- a/webserver/angular.json
+++ b/webserver/angular.json
@@ -33,6 +33,11 @@
             ]
           },
           "configurations": {
+            "dev": {
+              "assets": [
+                "src/config/config.json"
+              ]
+            },
             "production": {
               "fileReplacements": [
                 {
