--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif8266
 ; board = nodemcuv2
 board = d1_mini
 ;board = esp12e
+
 framework = arduino
 
 lib_deps =
@@ -32,3 +33,4 @@ lib_deps =
 ; upload_port = IoLed.local
 ; upload_port = 10.233.60.251
 ; upload_port = iotbutton.lan
+upload_speed = 921600
