--- a/data/.bak/config/config.json
+++ b/data/.bak/config/config.json
@@ -2,8 +2,8 @@
   "network": {
     "AP_SSID": "iotdevice",
     "AP_password": "iotdevice",
-    "WiFi_SSID": "ssid",
-    "WiFi_password": "password",
+    "WiFi_SSID": "wifissid",
+    "WiFi_password": "wifipass",
     "ip_address": "192.168.1.2",
     "subnet": "255.255.255.0",
     "dns_Server": "192.168.1.1",
