--- a/webserver/angular.json
+++ b/webserver/angular.json
@@ -25,6 +25,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "src/styles-app-loading.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
             ],
             "scripts": [
@@ -102,7 +103,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/styles-app-loading.css"
             ],
             "scripts": []
           }
