--- a/data/config/config.json
+++ b/data/config/config.json
@@ -61,8 +61,9 @@
   },
   "device": {
     "track_restart_counter": true,
-    "loop_time_ms": 100,
     "publish_time_ms":1500
+    "angle_accuracy": 15,
+    "loop_time_ms": 30,
   },
   "info": {
     "restart_counter": 0,
