--- a/data/.bak/config/config.json
+++ b/data/.bak/config/config.json
@@ -59,8 +59,10 @@
   },
   "device": {
     "track_restart_counter": true,
-    "loop_time_ms": 100,
-    "publish_time_ms":1500
+    "angle_accuracy": 15,
+    "servo_speed_ms/60": 160,
+    "loop_sensor_time_ms": 30,
+    "publish_time_ms":50
   },
   "info": {
     "restart_counter": 0,
