--- a/data/config/config.json
+++ b/data/config/config.json
@@ -63,7 +63,9 @@
     "track_restart_counter": true,
     "publish_time_ms":1500
     "angle_accuracy": 15,
-    "loop_time_ms": 30,
+    "servo_speed_ms/60": 160,
+    "loop_sensor_time_ms": 30,
+    "publish_time_ms":50
   },
   "info": {
     "restart_counter": 0,
