--- a/data/config/config.json
+++ b/data/config/config.json
@@ -7,7 +7,7 @@
     "ip_address": "192.168.1.2",
     "subnet": "255.255.255.0",
     "dns_Server": "192.168.1.1",
-    "hostname": "iotbutton.lan"
+    "hostname": "iotdevice"
   },
   "mqtt": {
     "server": "broker.ddns.net",
@@ -15,8 +15,7 @@
     "user_name": "user_name",
     "user_password": "user_password",
     "port": 1883,
-    "id_name": "iot-button",
-    "reconnect_mqtt": false,
+    "reconnect_mqtt": true,
     "enable_user_and_pass": true,
     "enable_certificates": false,
     "ca_file": "/certs/ca.crt",
@@ -61,10 +60,10 @@
   },
   "device": {
     "track_restart_counter": true,
-    "angle_accuracy": 5,
-    "servo_speed_ms/60": 800,
-    "loop_sensor_time_ms": 15,
-    "publish_time_ms":15
+    "angle_accuracy": 1,
+    "servo_speed_ms/60": 600,
+    "loop_sensor_time_ms": 20,
+    "publish_time_ms":20
   },
   "info": {
     "restart_counter": 0,
