--- a/webserver/package.json
+++ b/webserver/package.json
@@ -50,8 +50,9 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
     "nebular-icons": "^1.1.0",
+    "protractor": "~7.0.0",
+    "schematics-scss-migrate": "^1.1.7",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
