--- a/platformio.ini
+++ b/platformio.ini
@@ -29,3 +29,5 @@ lib_deps =
 ; upload_port = IoLed.local
 ; upload_port = 192.168.1.242
 ; upload_port = iotbutton.lan
+upload_speed = 921600
+board_build.ldscript = eagle.flash.4m3m.ld
