Fixed mqtt data stream and upgraded delay for setRange() calibration

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,7 @@ lib_deps =
   ESP8266_SSD1306
   ; adafruit/Adafruit_VL53L0X @ ^1.1.0
   ; pololu/VL53L0X@^1.2.0
-  ; pololu/VL53L1X @ ^1.0.1
+  pololu/VL53L1X @ ^1.0.1
 
 ; For USB update:
 ; upload_port=COM4
