--- a/webserver/backend/package.json
+++ b/webserver/backend/package.json
@@ -12,6 +12,12 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ws": "^7.3.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.8",
+    "@types/ws": "^7.2.9",
+    "typescript": "^4.0.5"
   }
 }
