--- a/data/config/config.json
+++ b/data/config/config.json
@@ -7,7 +7,7 @@
     "ip_address": "192.168.1.2",
     "subnet": "255.255.255.0",
     "dns_Server": "192.168.1.1",
-    "hostname": "iotbutton.lan"
+    "hostname": "iotdevice"
   },
   "mqtt": {
     "server": "broker.ddns.net",
