--- a/data/.bak/config/config.json
+++ b/data/.bak/config/config.json
@@ -7,7 +7,7 @@
     "ip_address": "192.168.1.2",
     "subnet": "255.255.255.0",
     "dns_Server": "192.168.1.1",
-    "hostname": "iotbutton.lan"
+    "hostname": "iotdevice"
   },
   "mqtt": {
     "server": "broker.ddns.net",
@@ -15,6 +15,8 @@
     "user_name": "user_name",
     "user_password": "user_password",
     "port": 1883,
+    "id_name": "iot-button",
+    "reconnect_mqtt": false,
     "enable_user_and_pass": true,
     "enable_certificates": false,
     "ca_file": "/certs/ca.crt",
@@ -30,14 +32,18 @@
     ]
   },
   "services": {
+    "OTA": true,
     "FTP": {
       "enabled": true,
       "user": "paclema",
       "password": "paclema"
     },
-    "OTA": true,
-    "deep_sleep": {
+    "WebSockets": {
       "enabled": true,
+      "publish_time_ms": 100
+    },
+    "deep_sleep": {
+      "enabled": false,
       "mode": "WAKE_RF_DEFAULT",
       "mode_options": [
         "WAKE_RF_DEFAULT",
