--- a/webserver/angular.json
+++ b/webserver/angular.json
@@ -37,7 +37,11 @@
 						"scripts": [
 							"node_modules/jquery/dist/jquery.js",
 							"node_modules/bootstrap/dist/js/bootstrap.js"
-						]
+						],
+						"allowedCommonJsDependencies": [
+							"chart.js",
+			        "chartjs-plugin-annotation" 
+			     ]
 					},
 					"configurations": {
 						"dev": {
