--- a/webserver/package.json
+++ b/webserver/package.json
@@ -23,9 +23,12 @@
     "@nebular/eva-icons": "6.2.1",
     "@nebular/theme": "^6.2.1",
     "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.4",
+    "chartjs-plugin-annotation": "^0.5.7",
     "eva-icons": "^1.1.3",
     "jquery": "^3.5.1",
     "nebular-icons": "^1.1.0",
+    "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
