Fixed loop_time_ms config and main() & added debug for esp stack trace

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+;  To debug decoding the stack trace using: https://github.com/platformio/platform-espressif8266/issues/31
+;  pio device monitor --port COM5 --baud 115200 -f esp8266_exception_decoder
+; [env:upstream_develop]
+; platform = https://github.com/platformio/platform-espressif8266.git
+
 [env:nodemcuv2]
 platform = espressif8266
 ; board = nodemcuv2
