--- a/data/.bak/config/config.json
+++ b/data/.bak/config/config.json
@@ -67,7 +67,7 @@
     "track_restart_counter": true,
     "angle_accuracy": 5,
     "servo_speed_ms/60": 800,
-    "loop_sensor_time_ms": 30,
+    "loop_time_ms": 30,
     "publish_time_ms":50
   },
   "info": {
