--- a/data/config/config.json
+++ b/data/config/config.json
@@ -66,7 +66,7 @@
     "track_restart_counter": true,
     "angle_accuracy": 1,
     "servo_speed_ms/60": 600,
-    "loop_sensor_time_ms": 20,
+    "loop_time_ms": 20,
     "publish_time_ms":100
   },
   "info": {
