Created Radar webconfig

--- a/data/.bak/config/config.json
+++ b/data/.bak/config/config.json
@@ -65,10 +65,13 @@
   },
   "device": {
     "track_restart_counter": true,
-    "angle_accuracy": 5,
-    "servo_speed_ms/60": 800,
-    "loop_time_ms": 30,
-    "publish_time_ms":50
+    "loop_time_ms": 20,
+    "publish_time_ms":100
+  },
+  "radar": {
+    "enable_motor": true,
+    "angle_accuracy": 1,
+    "servo_speed_ms/60": 600
   },
   "info": {
     "restart_counter": 0,
