--- a/data/config/config.json
+++ b/data/config/config.json
@@ -64,10 +64,13 @@
   },
   "device": {
     "track_restart_counter": true,
-    "angle_accuracy": 1,
-    "servo_speed_ms/60": 600,
     "loop_time_ms": 20,
     "publish_time_ms":100
+  },
+  "radar": {
+    "enable_motor": false,
+    "angle_accuracy": 1,
+    "servo_speed_ms/60": 600
   },
   "info": {
     "restart_counter": 0,
