--- a/platformio.ini
+++ b/platformio.ini
@@ -10,16 +10,19 @@
 
 ;  To debug decoding the stack trace using: https://github.com/platformio/platform-espressif8266/issues/31
 ;  pio device monitor --port COM5 --baud 115200 -f esp8266_exception_decoder
-; [env:upstream_develop]
-; platform = https://github.com/platformio/platform-espressif8266.git
+[env:upstream_develop]
+platform = https://github.com/platformio/platform-espressif8266.git
 
-[env:nodemcuv2]
-platform = espressif8266
+; [env:nodemcuv2]
+; platform = espressif8266
+
+
 ; board = nodemcuv2
 board = d1_mini
 ;board = esp12e
 
 framework = arduino
+
 
 lib_deps =
   PubSubClient
@@ -40,3 +43,5 @@ lib_deps =
 ; upload_port = iotbutton.lan
 upload_speed = 921600
 board_build.ldscript = eagle.flash.4m3m.ld
+
+monitor_filters = esp8266_exception_decoder, colorize
