Added IWebConfig interface class

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,8 @@ lib_deps =
   ESP8266FtpServer
   ESP8266_SSD1306
 
+  ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
+
 ; For USB update:
 ; upload_port=COM4
 
