Added DistSensor classes and Factory for HCSR04, VL53L0X, VL53L1X & ROI

--- a/platformio.ini
+++ b/platformio.ini
@@ -29,11 +29,20 @@ lib_deps =
   ArduinoJson@>=6
   ESP8266FtpServer
   ESP8266_SSD1306
-  ; adafruit/Adafruit_VL53L0X @ ^1.1.0
-  ; pololu/VL53L0X@^1.2.0
-  pololu/VL53L1X @ ^1.0.1
 
   ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
+  
+  ; For VL53L0X sensor:
+  adafruit/Adafruit_VL53L0X @ ^1.1.0
+  ; pololu/VL53L0X@^1.2.0
+
+  ; For VL53L1X sensor:
+  pololu/VL53L1X @ ^1.0.1
+
+
+  ; For VL53L1X ROI sensor:
+  lib/tof_gestures
+  lib/vl53l1_api
 
 ; For USB update:
 ; upload_port=COM4
