Added ROI using 4 zones

--- a/platformio.ini
+++ b/platformio.ini
@@ -29,9 +29,10 @@ lib_deps =
   ArduinoJson@>=6
   ESP8266FtpServer
   ESP8266_SSD1306
+  links2004/WebSockets @ ^2.3.2
 
   ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
-  
+
   ; For VL53L0X sensor:
   adafruit/Adafruit_VL53L0X @ ^1.1.0
   ; pololu/VL53L0X@^1.2.0
