--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,33 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcuv2]
+[env:d1_mini]
 platform = espressif8266
-board = nodemcuv2
-; board = d1_mini
-;board = esp12e
 framework = arduino
+
+board = d1_mini
+; board = nodemcuv2
+; board = esp12e
+
+; For USB update:
+; upload_port=COM4
+
+; For OTA update:
+; Uncoment the upload protocol and select the port target
+
+; upload_protocol = espota
+; upload_port = iotdevice
+
+; upload_port = IoLed.local
+; upload_port = 192.168.1.242
+; upload_port = iotbutton.lan
+
+
+upload_speed = 921600
+
+; To configure esp8266 flash memory as 4M (3M SPIFFS):
+; board_build.ldscript = eagle.flash.4m3m.ld
+
 
 lib_deps =
   PubSubClient
@@ -22,14 +43,3 @@ lib_deps =
   ESP8266_SSD1306
 
   ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
-
-; For USB update:
-; upload_port=COM4
-
-; For OTA update:
-; upload_protocol = espota
-; upload_port = IoLed.local
-; upload_port = 192.168.1.242
-; upload_port = iotbutton.lan
-upload_speed = 921600
-board_build.ldscript = eagle.flash.4m3m.ld
