--- a/platformio.ini
+++ b/platformio.ini
@@ -8,38 +8,64 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:d1_mini]
-platform = espressif8266
+[platformio]
+default_envs = d1_mini
+; default_envs = lolin_d32
+
+[common_env_data]
 framework = arduino
-
-board = d1_mini
-; board = nodemcuv2
-; board = esp12e
-
 ; For USB update:
 ; upload_port=COM4
 
 ; For OTA update:
 ; Uncoment the upload protocol and select the port target
-
 ; upload_protocol = espota
 ; upload_port = iotdevice
+;  To select ota password:
+; upload_flags =
+;     --auth=otapwd
 
 ; upload_port = IoLed.local
 ; upload_port = 192.168.1.242
 ; upload_port = iotbutton.lan
 
-
+monitor_speed = 115200
 upload_speed = 921600
 
 ; To configure esp8266 flash memory as 4M (3M SPIFFS):
 ; board_build.ldscript = eagle.flash.4m3m.ld
 
-
+; lib_ldf_mode = deep+
 lib_deps =
+  ESP8266WiFi
+  ESP8266WebServer
+  ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
   PubSubClient
   ArduinoJson@>=6
+  links2004/WebSockets @ ^2.3.2
   ESP8266FtpServer
   ESP8266_SSD1306
+  FS
 
-  ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
+
+[env:d1_mini]
+platform = espressif8266
+framework = ${common_env_data.framework}
+board = d1_mini
+monitor_speed = ${common_env_data.monitor_speed}
+; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
+lib_deps = ${common_env_data.lib_deps}
+upload_speed = ${common_env_data.upload_speed}
+
+[env:lolin_d32]
+  platform = espressif32
+  board = lolin_d32
+  framework = ${common_env_data.framework}
+  board_build.mcu = esp32
+  board_build.f_cpu = 240000000L
+  monitor_speed = ${common_env_data.monitor_speed}
+  ; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
+  lib_deps = ${common_env_data.lib_deps}
+  ; build_flags =
+      ; ${common_env_data.build_flags}
+  upload_speed = ${common_env_data.upload_speed}
