--- a/platformio.ini
+++ b/platformio.ini
@@ -36,9 +36,20 @@ upload_speed = 921600
 ; board_build.ldscript = eagle.flash.4m3m.ld
 
 ; lib_ldf_mode = deep+
+
+
+
+[env:d1_mini]
+platform = espressif8266
+framework = ${common_env_data.framework}
+board = d1_mini
+monitor_speed = ${common_env_data.monitor_speed}
+upload_speed = ${common_env_data.upload_speed}
+; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
 lib_deps =
   ESP8266WiFi
   ESP8266WebServer
+  ESP8266mDNS
   ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
   PubSubClient
   ArduinoJson@>=6
@@ -47,25 +58,38 @@ lib_deps =
   ESP8266_SSD1306
   FS
 
+  ; WiFiClient
+  ; ESPAsyncTCP
+  ; ESP8266WiFiMulti
+  ; ESP Async WebServer
 
-[env:d1_mini]
-platform = espressif8266
-framework = ${common_env_data.framework}
-board = d1_mini
-monitor_speed = ${common_env_data.monitor_speed}
-; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
-lib_deps = ${common_env_data.lib_deps}
-upload_speed = ${common_env_data.upload_speed}
 
 [env:lolin_d32]
-  platform = espressif32
-  board = lolin_d32
-  framework = ${common_env_data.framework}
-  board_build.mcu = esp32
-  board_build.f_cpu = 240000000L
-  monitor_speed = ${common_env_data.monitor_speed}
-  ; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
-  lib_deps = ${common_env_data.lib_deps}
-  ; build_flags =
-      ; ${common_env_data.build_flags}
-  upload_speed = ${common_env_data.upload_speed}
+platform = espressif32
+board = lolin_d32
+framework = ${common_env_data.framework}
+board_build.mcu = esp32
+board_build.f_cpu = 240000000L
+monitor_speed = ${common_env_data.monitor_speed}
+; build_flags =
+    ; ${common_env_data.build_flags}
+upload_speed = ${common_env_data.upload_speed}
+; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
+lib_deps =
+  Wifi
+  WiFiMulti
+  WebServer
+  ESPmDNS
+  WiFiClientSecure
+  ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
+  PubSubClient
+  ArduinoJson@>=6
+  links2004/WebSockets @ ^2.3.2
+  ESP8266FtpServer
+  ESP8266_SSD1306
+  FS
+
+;   WiFiClient
+;   ESPAsyncTCP
+;   ESP8266WiFiMulti
+;   ESP Async WebServer
