--- a/data/.bak/config/config.json
+++ b/data/.bak/config/config.json
@@ -13,14 +13,14 @@
     "hostname": "iotdevice"
   },
   "mqtt": {
+    "enabled": false,
+    "reconnect_mqtt": false,
     "server": "broker.ddns.net",
-    "id_name": "iotbutton",
-    "user_name": "user_name",
-    "user_password": "user_password",
     "port": 1883,
     "id_name": "iot-button",
-    "reconnect_mqtt": false,
     "enable_user_and_pass": true,
+    "user_name": "user_name",
+    "user_password": "user_password",
     "enable_certificates": false,
     "ca_file": "/certs/ca.crt",
     "cert_file": "/certs/cert.der",
@@ -54,7 +54,7 @@
         "WAKE_RFCAL",
         "WAKE_NO_RFCAL"
       ],
-      "sleep_time": 60000,
+      "sleep_time": 60,
       "sleep_delay": 60
     },
     "light_sleep": {
