--- a/platformio.ini
+++ b/platformio.ini
@@ -50,6 +50,7 @@ lib_deps =
   ESP8266WiFi
   ESP8266WebServer
   ESP8266mDNS
+  WiFiClientSecure
   ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
   PubSubClient
   ArduinoJson@>=6
