--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,7 @@ framework = arduino
 ; Uncoment the upload protocol and select the port target
 ; upload_protocol = espota
 ; upload_port = iotdevice
+
 ;  To select ota password:
 ; upload_flags =
 ;     --auth=otapwd
@@ -59,11 +60,10 @@ lib_deps =
   ESP8266_SSD1306
   FS
 
-  ; WiFiClient
   ; ESPAsyncTCP
-  ; ESP8266WiFiMulti
   ; ESP Async WebServer
-
+; upload_protocol = espota
+; upload_port = iotdevice
 
 [env:lolin_d32]
 platform = espressif32
@@ -90,7 +90,9 @@ lib_deps =
   ESP8266_SSD1306
   FS
 
-;   WiFiClient
-;   ESPAsyncTCP
-;   ESP8266WiFiMulti
-;   ESP Async WebServer
+  ;  ESPAsyncTCP
+  ;  ESP Async WebServer
+; upload_protocol = espota
+; upload_port = iotdevice
+
+;
