Added platformio OTA targets

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,9 @@
 
 [platformio]
 default_envs = d1_mini
+; default_envs = d1_mini_OTA
 ; default_envs = lolin_d32
+; default_envs = lolin_d32_OTA
 
 [common_env_data]
 framework = arduino
@@ -62,8 +64,31 @@ lib_deps =
 
   ; ESPAsyncTCP
   ; ESP Async WebServer
-; upload_protocol = espota
-; upload_port = iotdevice
+
+
+[env:d1_mini_OTA]
+platform = espressif8266
+framework = ${common_env_data.framework}
+board = d1_mini
+monitor_speed = ${common_env_data.monitor_speed}
+upload_speed = ${common_env_data.upload_speed}
+; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
+lib_deps =
+  ESP8266WiFi
+  ESP8266WebServer
+  ESP8266mDNS
+  WiFiClientSecure
+  ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
+  PubSubClient
+  ArduinoJson@>=6
+  links2004/WebSockets @ ^2.3.2
+  ESP8266FtpServer
+  ESP8266_SSD1306
+  FS
+
+upload_protocol = espota
+upload_port = iotdevice
+
 
 [env:lolin_d32]
 platform = espressif32
@@ -90,9 +115,31 @@ lib_deps =
   ESP8266_SSD1306
   FS
 
-  ;  ESPAsyncTCP
-  ;  ESP Async WebServer
-; upload_protocol = espota
-; upload_port = iotdevice
 
-;
+[env:lolin_d32_OTA]
+platform = espressif32
+board = lolin_d32
+framework = ${common_env_data.framework}
+board_build.mcu = esp32
+board_build.f_cpu = 240000000L
+monitor_speed = ${common_env_data.monitor_speed}
+; build_flags =
+    ; ${common_env_data.build_flags}
+upload_speed = ${common_env_data.upload_speed}
+; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
+lib_deps =
+  Wifi
+  WiFiMulti
+  WebServer
+  ESPmDNS
+  WiFiClientSecure
+  ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
+  PubSubClient
+  ArduinoJson@>=6
+  links2004/WebSockets @ ^2.3.2
+  ESP8266FtpServer
+  ESP8266_SSD1306
+  FS
+
+upload_protocol = espota
+upload_port = iotdevice
