Updated RadarMotor class to work with ESP32 and Parallax class functions

--- a/platformio.ini
+++ b/platformio.ini
@@ -62,17 +62,17 @@ lib_deps =
   ESP8266_SSD1306
   FS
 
-  ; For VL53L0X sensor:
+  ; VL53L0X sensor:
   adafruit/Adafruit_VL53L0X @ ^1.1.0
   ; pololu/VL53L0X@^1.2.0
 
-  ; For VL53L1X sensor:
+  ; VL53L1X sensor:
   pololu/VL53L1X @ ^1.0.1
 
-
-  ; For VL53L1X ROI sensor:
+  ; VL53L1X ROI sensor:
   lib/tof_gestures
   lib/vl53l1_api
+
   ; ESPAsyncTCP
   ; ESP Async WebServer
 
@@ -97,15 +97,14 @@ lib_deps =
   ESP8266_SSD1306
   FS
 
-  ; For VL53L0X sensor:
+  ; VL53L0X sensor:
   adafruit/Adafruit_VL53L0X @ ^1.1.0
   ; pololu/VL53L0X@^1.2.0
 
-  ; For VL53L1X sensor:
+  ; VL53L1X sensor:
   pololu/VL53L1X @ ^1.0.1
 
-
-  ; For VL53L1X ROI sensor:
+  ; VL53L1X ROI sensor:
   lib/tof_gestures
   lib/vl53l1_api
 
@@ -138,17 +137,22 @@ lib_deps =
   ESP8266_SSD1306
   FS
 
-  ; For VL53L0X sensor:
+  ; VL53L0X sensor:
   adafruit/Adafruit_VL53L0X @ ^1.1.0
   ; pololu/VL53L0X@^1.2.0
 
-  ; For VL53L1X sensor:
+  ; VL53L1X sensor:
   pololu/VL53L1X @ ^1.0.1
 
-
-  ; For VL53L1X ROI sensor:
+  ; VL53L1X ROI sensor:
   lib/tof_gestures
   lib/vl53l1_api
+
+  ; Positional servo with analog output:
+  madhephaestus/ESP32Servo @ ^0.9.0
+
+  ; Parallax servo:
+  ecal-mid/ESP32Servo360 @ ^0.1.0
 
 
 [env:lolin_d32_OTA]
@@ -176,17 +180,23 @@ lib_deps =
   ESP8266_SSD1306
   FS
 
-  ; For VL53L0X sensor:
+  ; VL53L0X sensor:
   adafruit/Adafruit_VL53L0X @ ^1.1.0
   ; pololu/VL53L0X@^1.2.0
 
-  ; For VL53L1X sensor:
+  ; VL53L1X sensor:
   pololu/VL53L1X @ ^1.0.1
 
-
-  ; For VL53L1X ROI sensor:
+  ; VL53L1X ROI sensor:
   lib/tof_gestures
   lib/vl53l1_api
+
+  ; Positional servo with analog output:
+  madhephaestus/ESP32Servo @ ^0.9.0
+
+  ; Parallax servo:
+  ecal-mid/ESP32Servo360 @ ^0.1.0
+
 
 upload_protocol = espota
 upload_port = iotdevice
