Refactorized platformoi lib deps and added radar angle to ws

--- a/platformio.ini
+++ b/platformio.ini
@@ -39,6 +39,51 @@ upload_speed = 921600
 ; board_build.ldscript = eagle.flash.4m3m.ld
 
 ; lib_ldf_mode = deep+
+lib_deps_base =
+  FS
+  WiFiClientSecure
+  ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
+  PubSubClient
+  ArduinoJson@>=6
+  links2004/WebSockets @ ^2.3.2
+  ESP8266FtpServer
+  ESP8266_SSD1306
+
+  ; ESPAsyncTCP
+  ; ESP Async WebServer
+
+lib_deps_base_esp8266 =
+  ESP8266WiFi
+  ESP8266WiFiMulti
+  ESP8266WebServer
+  ESP8266mDNS
+
+lib_deps_base_esp32 =
+  Wifi
+  WiFiMulti
+  WebServer
+  ESPmDNS
+
+lib_deps_base_radar =
+  ; VL53L0X sensor:
+  adafruit/Adafruit_VL53L0X @ ^1.1.0
+  ; pololu/VL53L0X@^1.2.0
+
+  ; VL53L1X sensor:
+  pololu/VL53L1X @ ^1.0.1
+
+  ; VL53L1X ROI sensor:
+  lib/tof_gestures
+  lib/vl53l1_api
+
+lib_deps_base_radar_esp32 =
+  ; Positional servo with analog output:
+  madhephaestus/ESP32Servo @ ^0.9.0
+
+  ; Parallax servo:
+  ; ecal-mid/ESP32Servo360 @ ^0.2.2
+  ; https://github.com/ecal-mid/ESP32Servo360/archive/0.2.2.zip
+  https://github.com/paclema/ESP32Servo360.git#development
 
 
 
@@ -50,31 +95,10 @@ monitor_speed = ${common_env_data.monitor_speed}
 upload_speed = ${common_env_data.upload_speed}
 ; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
 lib_deps =
-  ESP8266WiFi
-  ESP8266WebServer
-  ESP8266mDNS
-  WiFiClientSecure
-  ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
-  PubSubClient
-  ArduinoJson@>=6
-  links2004/WebSockets @ ^2.3.2
-  ESP8266FtpServer
-  ESP8266_SSD1306
-  FS
+  ${common_env_data.lib_deps_base}
+  ${common_env_data.lib_deps_base_esp8266}
+  ${common_env_data.lib_deps_base_radar}
 
-  ; VL53L0X sensor:
-  adafruit/Adafruit_VL53L0X @ ^1.1.0
-  ; pololu/VL53L0X@^1.2.0
-
-  ; VL53L1X sensor:
-  pololu/VL53L1X @ ^1.0.1
-
-  ; VL53L1X ROI sensor:
-  lib/tof_gestures
-  lib/vl53l1_api
-
-  ; ESPAsyncTCP
-  ; ESP Async WebServer
 
 
 [env:d1_mini_OTA]
@@ -85,28 +109,9 @@ monitor_speed = ${common_env_data.monitor_speed}
 upload_speed = ${common_env_data.upload_speed}
 ; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
 lib_deps =
-  ESP8266WiFi
-  ESP8266WebServer
-  ESP8266mDNS
-  WiFiClientSecure
-  ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
-  PubSubClient
-  ArduinoJson@>=6
-  links2004/WebSockets @ ^2.3.2
-  ESP8266FtpServer
-  ESP8266_SSD1306
-  FS
-
-  ; VL53L0X sensor:
-  adafruit/Adafruit_VL53L0X @ ^1.1.0
-  ; pololu/VL53L0X@^1.2.0
-
-  ; VL53L1X sensor:
-  pololu/VL53L1X @ ^1.0.1
-
-  ; VL53L1X ROI sensor:
-  lib/tof_gestures
-  lib/vl53l1_api
+  ${common_env_data.lib_deps_base}
+  ${common_env_data.lib_deps_base_esp8266}
+  ${common_env_data.lib_deps_base_radar}
 
 upload_protocol = espota
 upload_port = iotdevice
@@ -119,40 +124,13 @@ framework = ${common_env_data.framework}
 board_build.mcu = esp32
 board_build.f_cpu = 240000000L
 monitor_speed = ${common_env_data.monitor_speed}
-; build_flags =
-    ; ${common_env_data.build_flags}
 upload_speed = ${common_env_data.upload_speed}
 ; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
 lib_deps =
-  Wifi
-  WiFiMulti
-  WebServer
-  ESPmDNS
-  WiFiClientSecure
-  ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
-  PubSubClient
-  ArduinoJson@>=6
-  links2004/WebSockets @ ^2.3.2
-  ESP8266FtpServer
-  ESP8266_SSD1306
-  FS
-
-  ; VL53L0X sensor:
-  adafruit/Adafruit_VL53L0X @ ^1.1.0
-  ; pololu/VL53L0X@^1.2.0
-
-  ; VL53L1X sensor:
-  pololu/VL53L1X @ ^1.0.1
-
-  ; VL53L1X ROI sensor:
-  lib/tof_gestures
-  lib/vl53l1_api
-
-  ; Positional servo with analog output:
-  madhephaestus/ESP32Servo @ ^0.9.0
-
-  ; Parallax servo:
-  ecal-mid/ESP32Servo360 @ ^0.1.0
+  ${common_env_data.lib_deps_base}
+  ${common_env_data.lib_deps_base_esp32}
+  ${common_env_data.lib_deps_base_radar}
+  ${common_env_data.lib_deps_base_radar_esp32}
 
 
 [env:lolin_d32_OTA]
@@ -167,36 +145,10 @@ monitor_speed = ${common_env_data.monitor_speed}
 upload_speed = ${common_env_data.upload_speed}
 ; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
 lib_deps =
-  Wifi
-  WiFiMulti
-  WebServer
-  ESPmDNS
-  WiFiClientSecure
-  ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
-  PubSubClient
-  ArduinoJson@>=6
-  links2004/WebSockets @ ^2.3.2
-  ESP8266FtpServer
-  ESP8266_SSD1306
-  FS
-
-  ; VL53L0X sensor:
-  adafruit/Adafruit_VL53L0X @ ^1.1.0
-  ; pololu/VL53L0X@^1.2.0
-
-  ; VL53L1X sensor:
-  pololu/VL53L1X @ ^1.0.1
-
-  ; VL53L1X ROI sensor:
-  lib/tof_gestures
-  lib/vl53l1_api
-
-  ; Positional servo with analog output:
-  madhephaestus/ESP32Servo @ ^0.9.0
-
-  ; Parallax servo:
-  ecal-mid/ESP32Servo360 @ ^0.1.0
-
+  ${common_env_data.lib_deps_base}
+  ${common_env_data.lib_deps_base_esp32}
+  ${common_env_data.lib_deps_base_radar}
+  ${common_env_data.lib_deps_base_radar_esp32}
 
 upload_protocol = espota
 upload_port = iotdevice
