Updated servo classes to work with ESP32 and ESP8266

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,8 +11,8 @@
 [platformio]
 default_envs = d1_mini
 ; default_envs = d1_mini_OTA
-; default_envs = lolin_d32
-; default_envs = lolin_d32_OTA
+; default_envs = lolin_d32_pro
+; default_envs = lolin_d32_pro_OTA
 
 [common_env_data]
 framework = arduino
@@ -78,7 +78,7 @@ lib_deps_base_radar =
 
 lib_deps_base_radar_esp32 =
   ; Positional servo with analog output:
-  madhephaestus/ESP32Servo @ ^0.9.0
+  https://github.com/RoboticsBrno/ServoESP32
 
   ; Parallax servo:
   ; ecal-mid/ESP32Servo360 @ ^0.2.2
@@ -117,9 +117,9 @@ upload_protocol = espota
 upload_port = iotdevice
 
 
-[env:lolin_d32]
+[env:lolin_d32_pro]
 platform = espressif32
-board = lolin_d32
+board = lolin_d32_pro
 framework = ${common_env_data.framework}
 board_build.mcu = esp32
 board_build.f_cpu = 240000000L
@@ -133,9 +133,9 @@ lib_deps =
   ${common_env_data.lib_deps_base_radar_esp32}
 
 
-[env:lolin_d32_OTA]
+[env:lolin_d32_pro_OTA]
 platform = espressif32
-board = lolin_d32
+board = lolin_d32_pro
 framework = ${common_env_data.framework}
 board_build.mcu = esp32
 board_build.f_cpu = 240000000L
