Added board partitions tables for ESP32

--- a/platformio.ini
+++ b/platformio.ini
@@ -115,6 +115,12 @@ lib_deps =
   ESP8266_SSD1306
   FS
 
+build_flags =
+  ${common_env_data.build_flags}
+  -DBOARD_HAS_PSRAM
+  -mfix-esp32-psram-cache-issue
+
+board_build.partitions = ./board_partitions/esp32/default_16MB.csv
 
 [env:lolin_d32_OTA]
 platform = espressif32
@@ -140,6 +146,13 @@ lib_deps =
   ESP8266FtpServer
   ESP8266_SSD1306
   FS
+
+build_flags =
+  ${common_env_data.build_flags}
+  -DBOARD_HAS_PSRAM
+  -mfix-esp32-psram-cache-issue
+
+board_build.partitions = ./board_partitions/esp32/default_16MB.csv
 
 upload_protocol = espota
 upload_port = iotdevice
