--- a/platformio.ini
+++ b/platformio.ini
@@ -11,8 +11,9 @@
 [platformio]
 default_envs = d1_mini
 ; default_envs = d1_mini_OTA
-; default_envs = lolin_d32
-; default_envs = lolin_d32_OTA
+; default_envs = lolin_d32_pro
+; default_envs = lolin_d32_pro_OTA
+
 
 [common_env_data]
 framework = arduino
@@ -39,7 +40,40 @@ upload_speed = 921600
 ; board_build.ldscript = eagle.flash.4m3m.ld
 
 ; lib_ldf_mode = deep+
+lib_deps_base =
+  FS
+  WiFiClientSecure
 
+  ; ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
+  ivanseidel/LinkedList
+  ; https://github.com/spacehuhn/SimpleList
+
+  PubSubClient
+  ArduinoJson@>=6
+  links2004/WebSockets @ ^2.3.2
+  ESP8266FtpServer
+  ESP8266_SSD1306
+
+
+  ; ESP Async WebServer
+  me-no-dev/ESP Async WebServer @ ^1.2.3
+
+lib_deps_base_esp8266 =
+  ESP8266WiFi
+  ESP8266WiFiMulti
+  ESP8266WebServer
+  ESPAsyncTCP
+  ESP8266mDNS
+
+lib_deps_base_esp32 =
+  Wifi
+  WiFiMulti
+  WebServer
+  AsyncTCP
+  ESPmDNS
+
+
+build_flags = -w
 
 
 [env:d1_mini]
@@ -50,20 +84,10 @@ monitor_speed = ${common_env_data.monitor_speed}
 upload_speed = ${common_env_data.upload_speed}
 ; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
 lib_deps =
-  ESP8266WiFi
-  ESP8266WebServer
-  ESP8266mDNS
-  WiFiClientSecure
-  ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
-  PubSubClient
-  ArduinoJson@>=6
-  links2004/WebSockets @ ^2.3.2
-  ESP8266FtpServer
-  ESP8266_SSD1306
-  FS
+  ${common_env_data.lib_deps_base}
+  ${common_env_data.lib_deps_base_esp8266}
 
-  ; ESPAsyncTCP
-  ; ESP Async WebServer
+build_flags = ${common_env_data.build_flags}
 
 
 [env:d1_mini_OTA]
@@ -74,46 +98,27 @@ monitor_speed = ${common_env_data.monitor_speed}
 upload_speed = ${common_env_data.upload_speed}
 ; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
 lib_deps =
-  ESP8266WiFi
-  ESP8266WebServer
-  ESP8266mDNS
-  WiFiClientSecure
-  ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
-  PubSubClient
-  ArduinoJson@>=6
-  links2004/WebSockets @ ^2.3.2
-  ESP8266FtpServer
-  ESP8266_SSD1306
-  FS
+  ${common_env_data.lib_deps_base}
+  ${common_env_data.lib_deps_base_esp32}
 
 upload_protocol = espota
 upload_port = iotdevice
 
+build_flags = ${common_env_data.build_flags}
 
-[env:lolin_d32]
+
+[env:lolin_d32_pro]
 platform = espressif32
 board = lolin_d32
 framework = ${common_env_data.framework}
 board_build.mcu = esp32
 board_build.f_cpu = 240000000L
 monitor_speed = ${common_env_data.monitor_speed}
-; build_flags =
-    ; ${common_env_data.build_flags}
 upload_speed = ${common_env_data.upload_speed}
 ; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
 lib_deps =
-  Wifi
-  WiFiMulti
-  WebServer
-  ESPmDNS
-  WiFiClientSecure
-  ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
-  PubSubClient
-  ArduinoJson@>=6
-  links2004/WebSockets @ ^2.3.2
-  ESP8266FtpServer
-  ESP8266_SSD1306
-  FS
+  ${common_env_data.lib_deps_base}
+  ${common_env_data.lib_deps_base_esp32}
 
 build_flags =
   ${common_env_data.build_flags}
@@ -122,30 +127,22 @@ build_flags =
 
 board_build.partitions = ./board_partitions/esp32/default_16MB.csv
 
-[env:lolin_d32_OTA]
+
+[env:lolin_d32_pro_OTA]
 platform = espressif32
 board = lolin_d32
 framework = ${common_env_data.framework}
 board_build.mcu = esp32
 board_build.f_cpu = 240000000L
 monitor_speed = ${common_env_data.monitor_speed}
-; build_flags =
-    ; ${common_env_data.build_flags}
 upload_speed = ${common_env_data.upload_speed}
 ; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
 lib_deps =
-  Wifi
-  WiFiMulti
-  WebServer
-  ESPmDNS
-  WiFiClientSecure
-  ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
-  PubSubClient
-  ArduinoJson@>=6
-  links2004/WebSockets @ ^2.3.2
-  ESP8266FtpServer
-  ESP8266_SSD1306
-  FS
+  ${common_env_data.lib_deps_base}
+  ${common_env_data.lib_deps_base_esp32}
+
+upload_protocol = espota
+upload_port = iotdevice
 
 build_flags =
   ${common_env_data.build_flags}
@@ -153,6 +150,3 @@ build_flags =
   -mfix-esp32-psram-cache-issue
 
 board_build.partitions = ./board_partitions/esp32/default_16MB.csv
-
-upload_protocol = espota
-upload_port = iotdevice
