Added SimpleList instead LinkedList lib

--- a/platformio.ini
+++ b/platformio.ini
@@ -44,9 +44,11 @@ lib_deps_base =
   FS
   WiFiClientSecure
 
+  ; // Using AsyncWebServer LinkedList lib can not be used because there is a class
+  ; // using the same name. For that reason, for now we use SimpleList until we fix
+  ; // this using namespace for example.
   ; ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
-  ivanseidel/LinkedList
-  ; https://github.com/spacehuhn/SimpleList
+  https://github.com/spacehuhn/SimpleList
 
   PubSubClient
   ArduinoJson@>=6
