Added AsyncWebserver for ESP32 and ESP8266 and updated getContentType()

--- a/platformio.ini
+++ b/platformio.ini
@@ -55,9 +55,6 @@ lib_deps_base =
   links2004/WebSockets @ ^2.3.2
   ESP8266FtpServer
   ESP8266_SSD1306
-
-
-  ; ESP Async WebServer
   me-no-dev/ESP Async WebServer @ ^1.2.3
 
 lib_deps_base_esp8266 =
@@ -75,7 +72,11 @@ lib_deps_base_esp32 =
   ESPmDNS
 
 
-build_flags = -w
+build_flags =
+  ; To remove compilation warnings
+  -w
+  ; To use Async webserver defining cpp files:
+  ; -D USE_ASYNC_WEBSERVER
 
 
 [env:d1_mini]
@@ -126,6 +127,7 @@ build_flags =
   ${common_env_data.build_flags}
   -DBOARD_HAS_PSRAM
   -mfix-esp32-psram-cache-issue
+  -D USE_ASYNC_WEBSERVER
 
 board_build.partitions = ./board_partitions/esp32/default_16MB.csv
 
@@ -150,5 +152,6 @@ build_flags =
   ${common_env_data.build_flags}
   -DBOARD_HAS_PSRAM
   -mfix-esp32-psram-cache-issue
+  -D USE_ASYNC_WEBSERVER
 
 board_build.partitions = ./board_partitions/esp32/default_16MB.csv
