Changed LinkedList to SimpleList and added platformio missing radar libs

--- a/platformio.ini
+++ b/platformio.ini
@@ -71,6 +71,27 @@ lib_deps_base_esp32 =
   AsyncTCP
   ESPmDNS
 
+lib_deps_base_radar =
+  ; VL53L0X sensor:
+  adafruit/Adafruit_VL53L0X @ ^1.1.0
+  ; pololu/VL53L0X@^1.2.0
+
+  ; VL53L1X sensor:
+  pololu/VL53L1X @ ^1.0.1
+
+  ; VL53L1X ROI sensor:
+  lib/tof_gestures
+  lib/vl53l1_api
+
+lib_deps_base_radar_esp32 =
+  ; Positional servo with analog output:
+  https://github.com/RoboticsBrno/ServoESP32
+
+  ; Parallax servo:
+  ; ecal-mid/ESP32Servo360 @ ^0.2.2
+  ; https://github.com/ecal-mid/ESP32Servo360/archive/0.2.2.zip
+  https://github.com/paclema/ESP32Servo360.git#development
+
 
 build_flags =
   ; To remove compilation warnings
@@ -89,6 +110,7 @@ upload_speed = ${common_env_data.upload_speed}
 lib_deps =
   ${common_env_data.lib_deps_base}
   ${common_env_data.lib_deps_base_esp8266}
+  ${common_env_data.lib_deps_base_radar}
 
 build_flags = ${common_env_data.build_flags}
 
@@ -102,7 +124,8 @@ upload_speed = ${common_env_data.upload_speed}
 ; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
 lib_deps =
   ${common_env_data.lib_deps_base}
-  ${common_env_data.lib_deps_base_esp32}
+  ${common_env_data.lib_deps_base_esp8266}
+  ${common_env_data.lib_deps_base_radar}
 
 upload_protocol = espota
 upload_port = iotdevice
@@ -122,6 +145,9 @@ upload_speed = ${common_env_data.upload_speed}
 lib_deps =
   ${common_env_data.lib_deps_base}
   ${common_env_data.lib_deps_base_esp32}
+  ${common_env_data.lib_deps_base_radar}
+  ${common_env_data.lib_deps_base_radar_esp32}
+
 
 build_flags =
   ${common_env_data.build_flags}
@@ -144,6 +170,9 @@ upload_speed = ${common_env_data.upload_speed}
 lib_deps =
   ${common_env_data.lib_deps_base}
   ${common_env_data.lib_deps_base_esp32}
+  ${common_env_data.lib_deps_base_radar}
+  ${common_env_data.lib_deps_base_radar_esp32}
+
 
 upload_protocol = espota
 upload_port = iotdevice
