Fixed large json POST req for /save_config. Added serveStatic() files

--- a/platformio.ini
+++ b/platformio.ini
@@ -56,6 +56,7 @@ lib_deps_base =
   ESP8266FtpServer
   ESP8266_SSD1306
   me-no-dev/ESP Async WebServer @ ^1.2.3
+  ArduinoOTA
 
 lib_deps_base_esp8266 =
   ESP8266WiFi
@@ -102,7 +103,7 @@ upload_speed = ${common_env_data.upload_speed}
 ; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
 lib_deps =
   ${common_env_data.lib_deps_base}
-  ${common_env_data.lib_deps_base_esp32}
+  ${common_env_data.lib_deps_base_esp8266}
 
 upload_protocol = espota
 upload_port = iotdevice
