Added some platformio build flags

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,9 +25,10 @@ framework = arduino
 ; upload_protocol = espota
 ; upload_port = iotdevice
 
-;  To select ota password:
+;  To select ota password and port:
 ; upload_flags =
 ;     --auth=otapwd
+;     --port=8266
 
 ; upload_port = IoLed.local
 ; upload_port = 192.168.1.242
@@ -74,10 +75,14 @@ lib_deps_base_esp32 =
 
 
 build_flags =
-  ; To remove compilation warnings
-  -w
-  ; To use Async webserver defining cpp files:
-  ; -D USE_ASYNC_WEBSERVER
+  -w                          ; To remove compilation warnings
+  ; -D USE_ASYNC_WEBSERVER      ; To use Async webserver defining cpp files:
+
+  -D ENABLE_SERIAL_DEBUG      ; To enable Serial debug
+  ; -D DEBUG_ESP_CORE         ; More debug levels here: https://docs.platformio.org/en/latest/platforms/espressif8266.html#debug-level
+  -DDEBUG_ESP_WIFI
+  -DDEBUG_ESP_OTA
+
 
 
 [env:d1_mini]
@@ -107,6 +112,8 @@ lib_deps =
 
 upload_protocol = espota
 upload_port = iotdevice
+upload_flags =
+  --port=8266
 
 build_flags = ${common_env_data.build_flags}
 
@@ -148,6 +155,8 @@ lib_deps =
 
 upload_protocol = espota
 upload_port = iotdevice
+upload_flags =
+  --port=3232
 
 build_flags =
   ${common_env_data.build_flags}
