--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,7 @@
 
 [platformio]
 default_envs = d1_mini
+; default_envs = d1_mini_pro
 ; default_envs = d1_mini_OTA
 ; default_envs = lolin_d32_pro
 ; default_envs = lolin_d32_pro_OTA
@@ -58,7 +59,9 @@ lib_deps_base =
   ; ESP8266_SSD1306
   squix78/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.2.0
   ; me-no-dev/ESP Async WebServer @ ^1.2.3 ; Until PR is not solved, use this other
-  https://github.com/paclema/ESPAsyncWebServer.git#development
+  ; https://github.com/paclema/ESPAsyncWebServer.git#development
+  https://github.com/paclema/ESPAsyncWebServer.git#redefine-DYNAMIC_JSON_DOCUMENT_SIZE
+
 
 
   ArduinoOTA
@@ -103,13 +106,34 @@ build_flags =
   -w                          ; To remove compilation warnings
   ; -D USE_ASYNC_WEBSERVER      ; To use Async webserver defining cpp files:
 
-  -D CONFIG_JSON_SIZE=4096    ; To define WebConfigServer max config.json size
+  ; -D CONFIG_JSON_SIZE=4096    ; To define WebConfigServer max config.json size
+  -D CONFIG_JSON_SIZE=3072    ; To define WebConfigServer max config.json size
 
   ; -D ENABLE_SERIAL_DEBUG      ; To enable Serial debug
   ; -D DEBUG_ESP_CORE         ; More debug levels here: https://docs.platformio.org/en/latest/platforms/espressif8266.html#debug-level
   ; -DDEBUG_ESP_WIFI
   ; -DDEBUG_ESP_OTA
 
+
+
+[env:d1_mini_pro]
+platform = espressif8266
+framework = ${common_env_data.framework}
+board = d1_mini_pro
+monitor_speed = ${common_env_data.monitor_speed}
+upload_speed = ${common_env_data.upload_speed}
+; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
+lib_deps =
+  ${common_env_data.lib_deps_base}
+  ${common_env_data.lib_deps_base_esp8266}
+  ${common_env_data.lib_deps_base_radar}
+
+build_flags =
+  ${common_env_data.build_flags}
+  ; -Wl,-Teagle.flash.16m14m.ld
+
+; For now we can use only the half of the 16MB with this partition schema:
+board_build.ldscript = eagle.flash.8m6m.ld
 
 
 [env:d1_mini]
@@ -170,6 +194,7 @@ build_flags =
   -D USE_ASYNC_WEBSERVER
 
 board_build.partitions = ./board_partitions/esp32/default_16MB.csv
+; board_build.partitions = ./board_partitions/esp32/default.csv
 
 
 [env:lolin_d32_pro_OTA]
