--- a/data/config/config.json
+++ b/data/config/config.json
@@ -73,7 +73,7 @@
   },
   "radar": {
     "motor":{
-      "enabled": true,
+      "enabled": false,
       "debug": true,
       "control_pin": 0,
       "feedback_pin": 13,
@@ -86,11 +86,25 @@
       "debug": false,
       "time_budget_ms": 50
     },
-    "vl53l1x": {
-      "enabled": false,
+    "vl53l1x_1": {
+      "enabled": true,
       "debug": true,
       "time_budget_ms": 20,
-      "distance_mode": "Short",
+      "XSHUT_pin": 14,
+      "I2c_address": 42,
+      "distance_mode_options": [
+        "Short",
+        "Medium",
+        "Long",
+        "Unknown"
+      ]
+    },
+    "vl53l1x_2": {
+      "enabled": true,
+      "debug": true,
+      "time_budget_ms": 20,
+      "XSHUT_pin": 12,
+      "I2c_address": 43,
       "distance_mode_options": [
         "Short",
         "Medium",
@@ -102,7 +116,7 @@
       "enabled": false,
       "zones" : 4
     },
-    "debug": false,
+    "debug": true,
     "angle_min": 20,
     "angle_max": 180
   },
