--- a/platformio.ini
+++ b/platformio.ini
@@ -62,8 +62,6 @@ lib_deps_base =
   ; https://github.com/paclema/ESPAsyncWebServer.git#development
   https://github.com/paclema/ESPAsyncWebServer.git#redefine-DYNAMIC_JSON_DOCUMENT_SIZE
 
-
-
   ArduinoOTA
 
 lib_deps_base_esp8266 =
@@ -103,14 +101,14 @@ lib_deps_base_radar_esp32 =
 
 
 build_flags =
-  -w                          ; To remove compilation warnings
+  -w                            ; To remove compilation warnings
   ; -D USE_ASYNC_WEBSERVER      ; To use Async webserver defining cpp files:
 
-  ; -D CONFIG_JSON_SIZE=4096    ; To define WebConfigServer max config.json size
-  -D CONFIG_JSON_SIZE=3072    ; To define WebConfigServer max config.json size
+  -D CONFIG_JSON_SIZE=4096      ; To define WebConfigServer max config.json size
+  ; -D CONFIG_JSON_SIZE=3072
 
   ; -D ENABLE_SERIAL_DEBUG      ; To enable Serial debug
-  ; -D DEBUG_ESP_CORE         ; More debug levels here: https://docs.platformio.org/en/latest/platforms/espressif8266.html#debug-level
+  ; -D DEBUG_ESP_CORE           ; More debug levels here: https://docs.platformio.org/en/latest/platforms/espressif8266.html#debug-level
   ; -DDEBUG_ESP_WIFI
   ; -DDEBUG_ESP_OTA
 
