Added d1_mini_pro platformio target

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 [platformio]
 default_envs = d1_mini
 ; default_envs = d1_mini_OTA
+; default_envs = d1_mini_pro
 ; default_envs = lolin_d32_pro
 ; default_envs = lolin_d32_pro_OTA
 
@@ -124,6 +125,26 @@ upload_flags =
 build_flags = ${common_env_data.build_flags}
 
 
+[env:d1_mini_pro]
+platform = espressif8266
+framework = ${common_env_data.framework}
+board = d1_mini_pro
+monitor_speed = ${common_env_data.monitor_speed}
+upload_speed = ${common_env_data.upload_speed}
+; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
+lib_deps =
+  ${common_env_data.lib_deps_base}
+  ${common_env_data.lib_deps_base_esp8266}
+  ${common_env_data.lib_deps_base_radar}
+
+build_flags =
+  ${common_env_data.build_flags}
+  ; -Wl,-Teagle.flash.16m14m.ld
+
+; For now we can use only the half of the 16MB with this partition schema:
+board_build.ldscript = eagle.flash.8m6m.ld
+
+
 [env:lolin_d32_pro]
 platform = espressif32
 board = lolin_d32
@@ -144,6 +165,7 @@ build_flags =
   -D USE_ASYNC_WEBSERVER
 
 board_build.partitions = ./board_partitions/esp32/default_16MB.csv
+; board_build.partitions = ./board_partitions/esp32/default.csv
 
 
 [env:lolin_d32_pro_OTA]
@@ -171,3 +193,4 @@ build_flags =
   -D USE_ASYNC_WEBSERVER
 
 board_build.partitions = ./board_partitions/esp32/default_16MB.csv
+; board_build.partitions = ./board_partitions/esp32/default.csv
