--- a/platformio.ini
+++ b/platformio.ini
@@ -81,7 +81,7 @@ lib_deps_base_esp32 =
 
 build_flags =
   -w                          ; To remove compilation warnings
-  ; -D USE_ASYNC_WEBSERVER      ; To use Async webserver defining cpp files:
+  -D USE_ASYNC_WEBSERVER      ; To use Async webserver defining cpp files:
 
   -D CONFIG_JSON_SIZE=4096    ; To define WebConfigServer max config.json size
 
