--- a/data/config/config.json
+++ b/data/config/config.json
@@ -73,19 +73,19 @@
   },
   "radar": {
     "motor_1":{
-      "enabled": false,
+      "enabled": true,
       "debug": true,
       "control_pin": 0,
-      "feedback_pin": 13,
+      "feedback_pin": 12,
       "angle_accuracy": 1,
       "motor_speed_pulse": 5,
       "servo_speed_ms/60": 600
     },
     "motor_2":{
-      "enabled": false,
+      "enabled": true,
       "debug": true,
       "control_pin": 2,
-      "feedback_pin": 15,
+      "feedback_pin": 13,
       "angle_accuracy": 1,
       "motor_speed_pulse": 5,
       "servo_speed_ms/60": 600
@@ -94,7 +94,7 @@
       "enabled": true,
       "debug": true,
       "time_budget_ms": 20,
-      "XSHUT_pin": 14,
+      "XSHUT_pin": 16,
       "I2c_address": 42,
       "distance_mode_options": [
         "Short",
@@ -107,7 +107,7 @@
       "enabled": true,
       "debug": true,
       "time_budget_ms": 20,
-      "XSHUT_pin": 12,
+      "XSHUT_pin": 14,
       "I2c_address": 43,
       "distance_mode_options": [
         "Short",
