--- a/platformio.ini
+++ b/platformio.ini
@@ -64,6 +64,8 @@ lib_deps_base =
 
   ArduinoOTA
 
+  adafruit/Adafruit NeoPixel @ ^1.7.0
+
 lib_deps_base_esp8266 =
   ESP8266WiFi
   ESP8266WiFiMulti
