Added configurable roiZones config

--- a/data/config/config.json
+++ b/data/config/config.json
@@ -125,7 +125,9 @@
     },
     "ROI": {
       "enabled": false,
-      "zones" : 4
+      "zones": 2,
+      "zone_1": [ 12, 15, 15, 0],
+      "zone_2": [ 0, 15, 3, 0]
     },
     "angle_min": 20,
     "angle_max": 150,
