Added reedSwitch state in webapp dashboard and notify under /data/reedSwitch mqtt topic

--- a/platformio.ini
+++ b/platformio.ini
@@ -119,6 +119,7 @@ build_flags =
 platform = espressif8266
 framework = ${common_env_data.framework}
 board = d1_mini
+upload_port = COM6
 monitor_speed = ${common_env_data.monitor_speed}
 upload_speed = ${common_env_data.upload_speed}
 ; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
